# BugTracker

./: .gitignore  README.md  manage.py  pyproject.toml
bugs/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
bugs/migrations/: 0002_comment_comment_date.py  0004_bug_active.py
bugs/templates/bugs/: base.html  index.html
bugtracker/: settings.py  urls.py
bugtracker/bugs/: admin.py  forms.py  models.py  urls.py  views.py
bugtracker/bugs/migrations/: 0001_initial.py  0003_auto_20210411_2236.py
bugtracker/bugs/templates/bugs/: detail.html
bugtracker/settings/: base.py  dev.py  prod.py
frontend/: .eslintcache  package-lock.json  package.json
frontend/src/: App.js  routes.js
frontend/src/components/: App.js  Modal.js
frontend/src/components/Sidebar/: Sidebar.js
frontend/src/views/: Dashboard.js
frontend/static/frontend/: main.js
